RESOLVED FIXED 265843
menuId and parentMenuId is wrong in the menus API
https://bugs.webkit.org/show_bug.cgi?id=265843
Summary menuId and parentMenuId is wrong in the menus API
Timothy Hatcher
Reported 2023-12-04 18:53:19 PST
They should be menuItemId and parentMenuItemId.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-04 18:53:40 PST
Timothy Hatcher
Comment 2 2023-12-04 18:57:30 PST
EWS
Comment 3 2023-12-05 11:06:55 PST
Committed 271560@main (cec52d1f1d68): <https://commits.webkit.org/271560@main> Reviewed commits have been landed. Closing PR #21314 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.